examples/test/testpolicy8253.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8253
  namespace: namespace251
spec:
  podSelector:
    matchLabels:
      key34: value44
      key31: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value40
      podSelector:
        matchLabels:
          key20: value19
          key12: value46
          key44: value9
